--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,4 +10,9 @@
             android:title="@string/menu_edit_friends_label"
             android:orderInCategory="100"
             app:showAsAction="never"/>
+      <item android:id="@+id/action_camera"
+            android:title="@string/menu_camera_label"
+            android:orderInCategory="100"
+            app:showAsAction="ifRoom"
+          android:icon="@drawable/ic_camera_enhance_white_24dp"/>
 </menu>
