Finished "Customizing the Action Bar".

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,17 +2,20 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
-    <item android:id="@+id/action_logout"
-          android:title="@string/menu_logout_label"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
-      <item android:id="@+id/action_edit_friends"
-            android:title="@string/menu_edit_friends_label"
-            android:orderInCategory="100"
-            app:showAsAction="never"/>
-      <item android:id="@+id/action_camera"
-            android:title="@string/menu_camera_label"
-            android:orderInCategory="100"
-            app:showAsAction="ifRoom"
-          android:icon="@drawable/ic_camera_enhance_white_24dp"/>
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:title="@string/menu_logout_label"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_edit_friends"
+        android:orderInCategory="100"
+        android:title="@string/menu_edit_friends_label"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_camera"
+        android:icon="@drawable/ic_menu_camera"
+        android:orderInCategory="100"
+        android:title="@string/menu_camera_label"
+        app:showAsAction="ifRoom"/>
 </menu>
