--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,92 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- File created by the Android Action Bar Style Generator
+
+     Copyright (C) 2011 The Android Open Source Project
+     Copyright (C) 2012 readyState Software Ltd
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
+
 <resources>
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+
+    <style name="Theme.Ribbot" parent="@style/Theme.AppCompat.Light">
+        <item name="actionBarItemBackground">@drawable/selectable_background_ribbot</item>
+        <item name="popupMenuStyle">@style/PopupMenu.Ribbot</item>
+        <item name="dropDownListViewStyle">@style/DropDownListView.Ribbot</item>
+        <item name="actionBarTabStyle">@style/ActionBarTabStyle.Ribbot</item>
+        <item name="actionDropDownStyle">@style/DropDownNav.Ribbot</item>
+        <item name="actionBarStyle">@style/ActionBar.Solid.Ribbot</item>
+        <item name="actionModeBackground">@drawable/cab_background_top_ribbot</item>
+        <item name="actionModeSplitBackground">@drawable/cab_background_bottom_ribbot</item>
+        <item name="actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Ribbot</item>
         <item name="android:editTextBackground">@drawable/apptheme_edit_text_holo_light</item>
+        <item name="android:actionOverflowButtonStyle">@style/Theme.Ribbot.OverFlow</item>
+
+
+    </style>
+
+    <style name="Theme.Ribbot.OverFlow" parent="android:Widget.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_menu_overflow</item>
+    </style>
+
+    <style name="ActionBar.Solid.Ribbot" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
+        <item name="background">@drawable/ab_solid_ribbot</item>
+        <item name="backgroundStacked">@drawable/ab_stacked_solid_ribbot</item>
+        <item name="backgroundSplit">@drawable/ab_bottom_solid_ribbot</item>
+        <item name="progressBarStyle">@style/ProgressBar.Ribbot</item>
+        <item name="android:titleTextStyle">@style/ActionBar.Solid.Ribbot.TitleTextStyle</item>
+    </style>
+
+    <style name="ActionBar.Solid.Ribbot.TitleTextStyle" parent = "android:TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/text_color</item>
+    </style>
+
+    <style name="ActionBar.Transparent.Ribbot" parent="@style/Widget.AppCompat.Light.ActionBar">
+        <item name="background">@drawable/ab_transparent_ribbot</item>
+        <item name="progressBarStyle">@style/ProgressBar.Ribbot</item>
+    </style>
+
+    <style name="PopupMenu.Ribbot" parent="@style/Widget.AppCompat.Light.PopupMenu">
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_ribbot</item>
+    </style>
+
+    <style name="DropDownListView.Ribbot" parent="@style/Widget.AppCompat.Light.ListView.DropDown">
+        <item name="android:listSelector">@drawable/selectable_background_ribbot</item>
+    </style>
+
+    <style name="ActionBarTabStyle.Ribbot" parent="@style/Widget.AppCompat.Light.ActionBar.TabView">
+        <item name="android:background">@drawable/tab_indicator_ab_ribbot</item>
+    </style>
+
+    <style name="DropDownNav.Ribbot" parent="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar">
+        <item name="android:background">@drawable/spinner_background_ab_ribbot</item>
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_ribbot</item>
+        <item name="android:dropDownSelector">@drawable/selectable_background_ribbot</item>
+    </style>
+
+    <style name="ProgressBar.Ribbot" parent="@style/Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:progressDrawable">@drawable/progress_horizontal_ribbot</item>
+    </style>
+
+    <style name="ActionButton.CloseMode.Ribbot" parent="@style/Widget.AppCompat.Light.ActionButton.CloseMode">
+        <item name="android:background">@drawable/btn_cab_done_ribbot</item>
+    </style>
+
+    <!-- this style is only referenced in a Light.DarkActionBar based theme -->
+    <style name="Theme.Ribbot.Widget" parent="@style/Theme.AppCompat">
+        <item name="popupMenuStyle">@style/PopupMenu.Ribbot</item>
+        <item name="dropDownListViewStyle">@style/DropDownListView.Ribbot</item>
     </style>
 
 
