Finished "Customizing a ListView for the Inbox".

--- a/app/src/main/res/layout-large/activity_login.xml
+++ b/app/src/main/res/layout-large/activity_login.xml
@@ -3,7 +3,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context="atchley.chris.ribbot.LoginActivity">
+                tools:context="atchley.chris.ribbot.ui.LoginActivity">
 
     <ImageView
         android:id="@+id/background_image"
