--- a/app/src/main/res/layout/activity_edit_friends.xml
+++ b/app/src/main/res/layout/activity_edit_friends.xml
@@ -6,7 +6,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="atchley.chris.ribbot.EditFriendsActivity">
+                tools:context="atchley.chris.ribbot.ui.EditFriendsActivity">
 
     <ListView
         android:layout_width="match_parent"
