--- a/app/src/main/res/menu/menu_recipients.xml
+++ b/app/src/main/res/menu/menu_recipients.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="atchley.chris.ribbot.RecipientsActivity">
+      tools:context="atchley.chris.ribbot.ui.RecipientsActivity">
     <item
         android:id="@+id/action_send"
         android:icon="@drawable/ic_menu_send"
